Adding bone-only nsm and reformatting pipeline accordingly.

--- a/config_template.json
+++ b/config_template.json
@@ -1,4 +1,7 @@
 {
+    "perform_bone_only_nsm": false,
+    "perform_bone_and_cart_nsm": true,
+    "default_seg_model": "acl_qdess_bone_july_2024",
     "models": {
         "acl_qdess_bone_july_2024": "/path/to/best_model.h5"
     },
@@ -7,7 +10,14 @@
         "path_model_state": "/path/to/NSM_MODELS/231_nsm_femur_cartilage_v0.0.1/model/2000.pth"
     },
     "bscore": {
-        "path_model_folder": "/BSCORE_MODELS/NSM_Orig_BScore_Nov_2024"
+        "path_model_folder": "/path/to/BSCORE_MODELS/NSM_Orig_BScore_Nov_2024"
+    },
+    "nsm_bone_only": {
+        "path_model_config": "/path/to/NSM_MODELS/551_nsm_femur_bone_v0.0.1/model_params_config.json",
+        "path_model_state": "/path/to/NSM_MODELS/551_nsm_femur_bone_v0.0.1/model/1150.pth"
+    },
+    "bscore_bone_only": {
+        "path_model_folder": "/path/to/BSCORE_MODELS/NSM_Orig_BScore_Bone_Only_Jan_2025"
     },
     "regions": {
         "cart": {
