Updated segmentation pipeline to include ax/cor/sag models, as well as STAPLE combines and to support femur clipping
- Add support for multiple segmentation models (sagittal, coronal, axial, STAPLE)
- Implement femur top clipping functionality
 - This improves latent vectors fit for bone only NSM
- Update config template with new model paths
- Create utility function for femur mesh clipping
- Modify default segmentation model to 'staple'

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 **/nsm
 **/pymskt
 **/Dependencies
-**/BSCORE_MODELS
 **/MDC_controls
 **/models_and_weights
 **/mean_data
@@ -16,6 +15,6 @@ config.json
 test_commands.txt
 
 
-*.pyc
-*__pycache__
+**/*.pyc
+**/__pycache__
 *.DS_Store
